add support for cookbooks table
